--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vuelidate": "^0.7.5"
+        "es6-promise": "^4.2.8",
+        "vuelidate": "^0.7.5",
+        "vuex": "^3.4.0"
     }
 }
